--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,8 +29,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  http: any
+  http: 0.13.4
   shared_preferences: any
+  flutter_spinkit: ^5.1.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
